Rearranged ordering of home page link cards so as to prevent text squish.

--- a/src/Styles/Pages/Home.less
+++ b/src/Styles/Pages/Home.less
@@ -138,13 +138,6 @@
 				flex: 1;
 				min-width: 100px;
 
-				&:nth-child(1) {
-					flex-basis: 100%;
-					@media screen and (min-width: 600px) {
-						flex-basis: 0;
-					}
-				}
-
 				@media screen and (min-width: 600px) {
 					&:hover,
 					&:active {
